2014-02-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main) - Add two conditions on ENABLE_NANORC.
	* src/files.c (close_buffer, do_insertfile) - Likewise.
	This avoids compilation failure when nano is configured
	with both --disable-color and --disable-nanorc.

2014-02-22  Felipe Bugno  <capent@Savannah>  (tiny change)
	* doc/nanorc.sample.in - Add an include for CMake files.

2014-02-22  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/nano.c (allow_pending_sigwinch) - A (char *) cast for pedantic purposes.
	* src/cut.c (do_cut_text) - Wrap a reference to 'copy_text' in NANO_TINY.

2014-02-22  David Lawrence Ramsey  <pooka109@gmail.com>
	* ChangeLog, NEWS, doc/faq.html - Fix typos, wording, and spacing.

2014-01-24 Benno Schulenberg <bens>
	* src/nano.c (copy_from_filestruct) - Check explicitly for mark being set when
	  trying to partition, as we shouldn't be messing with the x address, etc.

2014-01-25 Chris Allegretta <chrisa@asty.org>
	* src/winio.c (set_modified) - Check for a filename before we bother trying to lock

2014-01-01 Chris Allegretta <chrisa@asty.org>
	* doc/texinfo/nano.texi - Change '@sp4' since makeinfo 5.1 hates the
	  lack of spacing.  Fixes Savannah bug 40103 repored by flapane@Savannah.
	  Also change SVN status to non-binary so diffs work.

2014-01-01 Chris Allegretta <chrisa@asty.org>
	* src/global.c (strtokeytype) - Check for lower-case 'f' for defining F-key
	  sequences for consistency (previously was two checks for upper case F). Fixes
	  bug 40815 reported by David Binderman <dcb314@Savannah>.

2013-06-13 Matthew Fischer <mfisch@Savannah>
	* doc/syntax/c.nanorc - Add auto keyword

2013-06-13  David Lawrence Ramsey <pooka109@gmail.com>
	* src/global.c (first_sc_for) - try and more consistently display keystrokes,
	  useful when the user has re-binded a bunch of them.

2013-06-13 Kamil Dudka <kdudka@redhat.com>
	* doc/man/nano.1 - Actually document the -P (--poslog) option.
